// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render as custom element 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <select
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 iIqeeo"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with addons 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
  >
    <span>
      start
    </span>
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600 some-class-name"
    >
      <div
        class=""
      >
        <span>
          end
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with focus 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with invalid 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
    >
      <span
        data-errortext="Field invalid"
        data-testid="Input__error"
      >
        <div
          class="sc-bdvvtL qGXhc text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with suggestion 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
  >
    <div
      class="relative flex flex-1 h-full"
    >
      <input
        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="Input"
        value=""
      />
      <span
        class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
        data-testid="Input__suggestion"
      >
        <span
          class="truncate"
        >
          suggestion
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
